# BloodBorne-Board-Game

./: .gitignore  Arm Cannon.md  LICENSE  README.md  pyproject.toml
.obsidian/: workspace.json
current version/Blood Gems/: Blood gem scratch ideas.md
current version/Character sheets/: Alfred, Church Executioner ⛪🩸.md  Djura, Friend to Beasts 💥.md  Djura, Friend to Beasts 💥👁.md  Eileen the Crow ⛪.md  Eileen the Crow.md  Father Gascoigne ⚔💥.md  Father Gascoigne.md  Henrik the Cursed 👁.md  Henrik the Cursed 🩸.md  Henrik the Cursed.md  Lady Maria of the Astral Clocktower ⚔.md  Lady Maria of the Astral Clocktower ⚔👁.md  Lady Maria of the Astral Clocktower.md  Lucie, Scholar of Forbidden Arts 👁.md  Lucie, Scholar of Forbidden Arts.md  Marvelous Chester.md  Simon, The Harrowed 👁.md  Simon, The Harrowed 🩸.md  Simon, The Harrowed.md
current version/Rules/: Beasthood.md  Blood gems.md  Combat.md  Depths.md  Doctrine and Loyalty.md  Exploration.md  Gameplay.md  Hunter Tools.md  Level up.md  Monsters.md  Overview and setup.md  Reactions.md  Rooms.md
current version/Weapons/: Amygdalan Arm 👁.md  Arm Cannon 💥.md  Blade of Mercy ⛪.md  Blade of Mercy.md  Bloodletter ⛪.md  Boom Hammer 💥.md  Bowblade ⛪.md  Burial Blade ⚔.md  Chikage 🩸.md  Holy Moonlight Blade ⚔️.md  Rifle Spear 💥.md  Saw Cleaver .md  Saw Cleaver ⛪.md
legacy version/: Beasthood reached.md  Legacy README.md
legacy version/Firearms/: Arm Cannon.md  Blunderbuss.md  Evelyn.md  Hunter's Pistol.md  Hunters Rifle.md
legacy version/Hunters Tools/: A Call Beyond.md  Auger of Ebritas.md  (+6 more)
v1.0.0/: Ideas.md  Levelling.md
(+47 files in other folders)
